--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h2>
                 <a href="index.html">
                     <img style="height:1.05em;" src="img/logo.svg">
-                    <span id="title">Math 466</span>
+                    <span id="title">Math 466: Advanced Big Data Analysis</span>
                 </a>
             </h2>
             <h3>
