First week update

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 <a href="info.html">Info</a>
             </h3>
         </div>
-
+        <h4>Lectures</h4>
+            <p>
+                Recorded lectures can be found <a href='https://drive.google.com/drive/folders/1OsO6sLpXoTdEcw8hHrLED6LJ_F0Nm77_?usp=sharing'>here</a>, to get access, please email (cgu.math466 [at] gmail [dot] com).
+        </p>
         <div class="main">
             <table>
                 <tr>
@@ -49,7 +52,7 @@
                         Large scale convex optimization problems and relation to our canonical settings.
                         Stochastic methods (eg. SGD).
                     </td>
-                    <td> Find a paper or select one from the sources <a href="https://en.wikipedia.org/wiki/Autoencoder#cite_ref-:0_2-0">here</a>, submit ~1 page summary and find related github code if possible.
+                    <td> Submit a 1-page summary of a topic (or topics) in probability that you are interested in or less familiar with.
                     </td>
                 </tr>
 
