--- a/info.html
+++ b/info.html
@@ -67,7 +67,8 @@
 
             <h4>Grading</h4>
             <ul>
-                <li>35% Homework</li>
+                <li>5% Attendance/Participation</li>
+                <li>30% Homework</li>
                 <li>30% Midterm Project</li>
                 <li>35% Final Project</li>
                 <li>[Up to 5% Extra Credit]</li>
@@ -76,6 +77,10 @@
             <h4>Homework</h4>
             <p>
                 Homework will take the form of paper summaries and literature reviews that will be due most weeks.
+            </p>
+            <h4>Lectures</h4>
+            <p>
+                Recorded lectures can be found <a href='https://drive.google.com/drive/folders/1OsO6sLpXoTdEcw8hHrLED6LJ_F0Nm77_?usp=sharing'>here</a>, to get access, please email (cgu.math466 [at] gmail [dot] com).
             </p>
 
             <a name="midterm"></a>
