--- a/info.html
+++ b/info.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <title>Math 466</title>
-    <meta name="description" content="Claremont Graduate University Advanced Big Data Analysis Spring 2021">
+    <meta name="description" content="Claremont Graduate University Advanced Big Data Analysis Spring 2023">
     
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -31,7 +31,7 @@
                 Math 466, Spring 2021</br>
                 Claremont Graduate University</br>
                 Professor: <span style="display:inline-block;width:3.7em;"></span><a href="mailto:gu@g.hmc.edu">Weiqing Gu</a></br>
-                Teaching Assistant: <a href="mailto:eweiner@g.hmc.edu">Eric Weiner</a>
+                Teaching Assistant: <a href="mailto:lgoldman@g.hmc.edu">Laney Goldman</a>
             </p>
 
             <h4>Meeting Time</h4>
