--- a/info.html
+++ b/info.html
@@ -28,14 +28,14 @@
         <div class="main">
             <a name="info"></a><h3>Advanced Big Data Analysis</h3>
             <p id="spacing">
-                Math 466, Spring 2021</br>
+                Math 466, Spring 2023</br>
                 Claremont Graduate University</br>
                 Professor: <span style="display:inline-block;width:3.7em;"></span><a href="mailto:gu@g.hmc.edu">Weiqing Gu</a></br>
                 Teaching Assistant: <a href="mailto:lgoldman@g.hmc.edu">Laney Goldman</a>
             </p>
 
             <h4>Meeting Time</h4>
-            <pre>M 07:00-09:50PM.</pre>
+            <pre>W 07:00-09:50PM.</pre>
 
             <h4>Office Hours</h4>
             <pre>TBA</pre>
