--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                     <th>Due</th>
                 </tr>
                 <tr>
-                    <td> January 25</br>
+                    <td> January 17 and 25</br>
                     </td>
                     <td>
                         Overview. Review of key concepts from probability and machine learning such as Maximum Likelihood Estimation and the Expectation Maximization algroithm.
-                        Canonical examples of large data problems.
+                        Canonical examples of large data problems. Explore most advanced ML technologies and settle down topics for term projects including Transformers, GPT-3 and ChatGPT.
                     </td>
                     <td>Nothing.</td>
                 </tr>
