--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         Overview. Review of key concepts from probability and machine learning such as Maximum Likelihood Estimation and the Expectation Maximization algroithm.
                         Canonical examples of large data problems. Explore most advanced ML technologies and settle down topics for term projects including Transformers, GPT-3 and ChatGPT.
                     </td>
-                    <td>Nothing.</td>
+                    <td>Explore GPT-3 and ChatGPT</td>
                 </tr>
 
                 <tr>
