--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <h4>Lectures</h4>
             <p>
-                Recorded lectures can be found <a href='https://drive.google.com/drive/folders/1OsO6sLpXoTdEcw8hHrLED6LJ_F0Nm77_?usp=sharing'>here</a>, to get access, please email (cgu.math466 [at] gmail [dot] com).
+                Recorded lectures can be found <a href='https://drive.google.com/drive/u/1/folders/1OofJbboQzuuQRjMGTdg4YXQdYpYbv6_0=sharing'>here</a>, to get access, please email (cgu.math466 [at] gmail [dot] com).
         </p>
         <div class="main">
             <table>
